# figure-skating-analyzer

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  competition.py  competitions.yaml  crawl_page.py  deploy.sh  docker-compose.yml  exploration.ipynb  nginx.conf  parse_pdfs.py  render.yaml  tidify_results.py
backend/: pyproject.toml  requirements.txt  seed.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: guards.py  rate_limit.py  tokens.py
backend/app/data/: program_rules_2025_2026.json  sov_2025_2026.json
backend/app/models/: __init__.py  allowed_domain.py  app_settings.py  category_result.py  challenge.py  competition.py  incident.py  job.py  (+10 more)
backend/scripts/: analyze_site.py
backend/tests/: conftest.py  test_auth.py  test_auth_utils.py  test_bulk_action.py  test_category_parser.py  test_change_password.py  test_competition_analysis.py  test_competition_metadata.py  test_config.py  test_element_classifier.py  test_fs_manager_scraper.py  test_import_club.py  test_integration.py  test_job_queue.py  test_job_queue_db.py  test_jobs_api.py  test_ligue_detection.py  test_name_parser.py  test_notifications.py  test_parser.py  test_polling.py  test_program_builder.py  test_rate_limit.py  test_reports.py  test_self_eval.py  test_site_scraper.py  test_skater_access.py  test_skater_merge.py  test_stats_routes.py  test_team_scoring.py  test_training_auth.py  test_training_incidents.py  test_training_models.py  test_training_reviews.py  test_training_timeline.py  test_training_toggle.py  test_users.py
(+1239 files in other folders)
