[project]
name = "figure-skating-analyzer"
version = "0.1.0"
description = "Download and analyze figure skating score cards"
requires-python = ">=3.11"
dependencies = [
    "litestar[standard]>=2.12",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "pdfplumber>=0.11",
    "beautifulsoup4>=4.12",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
    "PyJWT>=2.8",
    "bcrypt>=4.0",
    "google-auth>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
